src/articles/reader.sass
@use "../nav/nav"
@use "../about/about"
@use "../index"

.reader
  z-index: 9999
  font-family: Neuton, serif
  background: rgba(0,0,0,0.5)
  width: 100vw
  height: 100vh
  position: fixed
  top: 0
  left: 0

  h1
    font-size: xxx-large
  h2
    font-size: xx-large
  h3
    font-size: x-large
  p
    font-size: large

  display: flex

  > article
    display: flex
    flex-direction: column
    align-items: center
    border-radius: 15px
    margin: auto
    padding: 30px
    overflow-y: scroll
    background: white
    color: black
    height: 90vh
    max-width: 600px

.external-link
  color: inherit !important

.row
  margin: 30px 0
  display: flex
  flex-direction: row
  justify-content: center

.row>*
  width: 50%

.reader-close
  position: absolute
  align-self: flex-end
  font-size: large
  font-weight: bold
  color: red !important
  background: white
  border-radius: 15px

